--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Configure CMake
         run: |
-          cmake -S . -B build \
+          cmake -S gtaf/src -B build \
             -G Ninja \
             -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
 
