Update CMake configuration in build.yml
Add GTAF_BUILD_NUMBER to CMake configuration.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,8 @@ jobs:
         run: |
           cmake -S ./src -B build \
             -G Ninja \
-            -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+            -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
+            -DGTAF_BUILD_NUMBER=${{ github.run_number }}
 
       - name: Build
         run: |
