--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,19 +6,14 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-find_package(Git QUIET)
-
-if(GIT_FOUND AND EXISTS "${CMAKE_SOURCE_DIR}/.git")
-  execute_process(
-    COMMAND ${GIT_EXECUTABLE} describe --tags --dirty --always
-    OUTPUT_VARIABLE GIT_VERSION
-    OUTPUT_STRIP_TRAILING_WHITESPACE
-  )
+if(DEFINED GTAF_BUILD_NUMBER)
+  set(GTAF_FULL_VERSION
+      "${PROJECT_VERSION}.${GTAF_BUILD_NUMBER}")
 else()
-  set(GIT_VERSION "${PROJECT_VERSION}")
+  set(GTAF_FULL_VERSION "${PROJECT_VERSION}")
 endif()
 
-message(STATUS "GTAF build version: ${GIT_VERSION}")
+message(STATUS "GTAF build version: ${GTAF_FULL_VERSION}")
 
 # --- 2. Version header generation ---
 configure_file(
