--- a/src/include/version.h.in
+++ b/src/include/version.h.in
@@ -1,6 +1,2 @@
 #pragma once
-
-#define GTAF_VERSION "@GIT_VERSION@"
-#define GTAF_VERSION_MAJOR @PROJECT_VERSION_MAJOR@
-#define GTAF_VERSION_MINOR @PROJECT_VERSION_MINOR@
-#define GTAF_VERSION_PATCH @PROJECT_VERSION_PATCH@
+#define GTAF_VERSION "@GTAF_FULL_VERSION@"
