--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 name: Build GTAF
+run-name: GTAF ${{ env.GTAF_FULL_VERSION }} (#${{ github.run_number }})
 
 on:
   push:
@@ -16,6 +17,12 @@ jobs:
         build_type: [Release]
 
     steps:
+      - name: Compute build version
+        run: |
+          BASE_VERSION=0.0.1
+          BUILD_NUMBER=${{ github.run_number }}
+          echo "GTAF_FULL_VERSION=${BASE_VERSION}.${BUILD_NUMBER}" >> $GITHUB_ENV
+
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
@@ -35,7 +42,7 @@ jobs:
           cmake -S ./src -B build \
             -G Ninja \
             -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
-            -DGTAF_BUILD_NUMBER=${{ github.run_number }}
+            -DGTAF_FULL_VERSION=${{ env.GTAF_FULL_VERSION }}
 
       - name: Build
         run: |
@@ -58,5 +65,5 @@ jobs:
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: gtaf-build-${{ matrix.build_type }}
+          name: gtaf-build-${{ env.GTAF_FULL_VERSION }}
           path: artifacts
