--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ on:
     branches: [ "main"]
 
 jobs:
-  build:
+  build-linux:
     name: Build (Linux)
     runs-on: ubuntu-latest
 
@@ -20,12 +20,6 @@ jobs:
         build_type: [Release]
 
     steps:
-      # - name: Compute build version
-      #   run: |
-      #     BASE_VERSION=0.0.1
-      #     BUILD_NUMBER=${{ github.run_number }}
-      #     echo "GTAF_FULL_VERSION=${BASE_VERSION}.${BUILD_NUMBER}" >> $GITHUB_ENV
-
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
@@ -68,5 +62,57 @@ jobs:
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: gtaf-build-${{ env.GTAF_FULL_VERSION }}
+          name: gtaf-build-linux-${{ env.GTAF_FULL_VERSION }}
+          path: artifacts
+
+  build-windows:
+    name: Build (Windows)
+    runs-on: windows-latest
+
+    strategy:
+      matrix:
+        build_type: [Release]
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Install dependencies
+        run: |
+          choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y
+          choco install ninja -y
+
+      - name: Configure CMake
+        run: |
+          cmake -S ./src -B build \
+            -G Ninja \
+            -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
+            -DGTAF_FULL_VERSION=${{ env.GTAF_FULL_VERSION }}
+
+      - name: Build
+        run: |
+          cmake --build build --config ${{ matrix.build_type }}
+
+      - name: Run tests
+        if: always()
+        run: |
+          if (Test-Path build/CTestTestfile.cmake) {
+            ctest --test-dir build --output-on-failure
+          } else {
+            Write-Host "No tests found, skipping."
+          }
+        shell: pwsh
+
+      - name: Package artifacts
+        run: |
+          mkdir artifacts
+          Copy-Item -Recurse -Force build artifacts/build
+        shell: pwsh
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: gtaf-build-windows-${{ env.GTAF_FULL_VERSION }}
           path: artifacts
