--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -18,19 +18,24 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - name: Install dependencies
         run: |
           choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y
           choco install ninja -y
+
       - name: Configure CMake
+        shell: pwsh
         run: |
-          cmake -S ./src -B build \
-            -G Ninja \
-            -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
+          cmake -S ./src -B build `
+            -G Ninja `
+            -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} `
             -DGTAF_FULL_VERSION=${{ inputs.GTAF_FULL_VERSION }}
+
       - name: Build
         run: |
           cmake --build build --config ${{ matrix.build_type }}
+
       - name: Run tests
         if: always()
         run: |
@@ -40,11 +45,13 @@ jobs:
             Write-Host "No tests found, skipping."
           }
         shell: pwsh
+
       - name: Package artifacts
         run: |
           mkdir artifacts
           Copy-Item -Recurse -Force build artifacts/build
         shell: pwsh
+
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
