--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,9 @@ jobs:
     uses: ./.github/workflows/build-linux.yml
     with:
       GTAF_FULL_VERSION: 0.0.1.${{ github.run_number }}
+      BUILD_TYPE: Release
   build-windows:
     uses: ./.github/workflows/build-windows.yml
     with:
       GTAF_FULL_VERSION: 0.0.1.${{ github.run_number }}
+      BUILD_TYPE: Release
