refactor: Rename AtomLog to AtomStore for clarity Rename the AtomLog class to AtomStore throughout the codebase to better reflect its actual purpose as a storage engine rather than traditional logging. The previous name was misleading as it suggested append-only event recording, while the class actually serves as the core storage and persistence layer for atoms. Changes: - Renamed core files: atom_log.h/cpp → atom_store.h/cpp - Renamed test file: test_atom_log.cpp → test_atom_store.cpp - Updated all class references in core headers and implementations - Updated variable names: log → store, loaded_log → loaded_store - Updated build system (CMakeLists.txt) - Updated all documentation files This is a pure renaming operation with no functional changes. All APIs and behavior remain identical.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,7 +31,7 @@ configure_file(
 # 3. Library target (now with implementation files)
 # ------------------------------------------------------------
 add_library(gtaf_lib STATIC
-  core/atom_log.cpp
+  core/atom_store.cpp
   core/node.cpp
   core/projection_engine.cpp
   core/query_index.cpp
@@ -131,7 +131,7 @@ endif()
 # ------------------------------------------------------------
 add_executable(gtaf_test
   test/test_main.cpp
-  test/test_atom_log.cpp
+  test/test_atom_store.cpp
   test/test_persistence.cpp
   test/test_node.cpp
 )
