ci: Add documentation checks and optimize build triggers
Add a new docs-check workflow that validates documentation on PRs:
- Required headers check (Status, Last updated, Owner, Related ADRs)
- ADR immutability enforcement
- File naming conventions validation
- Decision language detection outside ADRs
- Markdown linting with markdownlint-cli2

Update build workflow to only trigger on source code changes
(cpp, h, CMakeLists.txt, and workflow files).

Also includes minor documentation updates:
- Add metadata headers to docs/STYLE.md
- Update ADR-004 status to Accepted
- Normalize ADR-005 format
- Fix markdown formatting in TPC-H README

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,10 +4,14 @@ run-name: GTAF 0.0.1.${{ github.run_number }}
 
 on:
   push:
-    branches: [ "main"]
-  pull_request:
-    branches: [ "main"]
-
+    branches: [ "main" ]
+    paths:
+      - "**.cpp"
+      - "**.h"
+      - "CMakeLists.txt"
+      - ".github/workflows/build.yml"
+      - ".github/workflows/build-linux.yml"
+      - ".github/workflows/build-windows.yml"
 
 jobs:
 
