feat(cli): Enhance command execution and parser functionality
- Introduced CommandInfo structure to store command handlers and descriptions.
- Updated CommandExecutor to support command registration with descriptions and command objects.
- Refactored ArgvFrontend and ReplFrontend to utilize dependency injection for shared components.
- Improved REPL loop to handle EOF and maintain last exit code.
- Enhanced session management with AtomStore integration for persistent state.
- Added comprehensive command handling in gtaf_cli for load, save, index, project, and stats commands.
- Implemented a robust CLI parser with support for quoted strings, escape sequences, and inline option values.
- Added unit tests to ensure parser equivalence between argv and REPL modes, verifying adherence to ADR-006.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -100,6 +100,13 @@ add_executable(gtaf-cli
   cli/frontends/argv.cpp
   cli/frontends/repl.h
   cli/frontends/repl.cpp
+  cli/commands/command_base.h
+  cli/commands/stats_command.h
+  cli/commands/stats_command.cpp
+  cli/commands/load_command.h
+  cli/commands/load_command.cpp
+  cli/commands/save_command.h
+  cli/commands/save_command.cpp
 )
 
 target_link_libraries(gtaf-cli PRIVATE gtaf_lib)
@@ -156,6 +163,8 @@ add_executable(gtaf_test
   test/test_atom_store.cpp
   test/test_persistence.cpp
   test/test_node.cpp
+  test/test_cli_parser.cpp
+  cli/parser/parser.cpp
 )
 
 target_link_libraries(gtaf_test PRIVATE gtaf_lib)
